--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "*.html": "html",
-        "1000.C": "cpp"
+        "1000.C": "cpp",
+        "QUESTAO2.C": "cpp",
+        "questao.C": "cpp"
     }
 }
